--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <li class="site-authorization-item"><a href="#">Регистрация</a></li>
                 </ul>
                 <ul class="site-navigation-list">
-                    <li class="site-navigation-item"><a href="#">Профиль</a></li>
-                    <li class="site-navigation-item"><a href="#">Корзина</a></li>
+                    <li class="site-navigation-item site-navigation-item-user"><a href="#">Профиль</a></li>
+                    <li class="site-navigation-item site-navigation-item-cart"><a href="#">Корзина</a></li>
                 </ul>
             </div>
             <ul class="menu-list">
