--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <header class="main-header">
+    <header class="main-header header-sticky">
         <nav class="main-nav container">
             <div class="nav-topbar">
                 <a href="#" class="logo">
